# google-trans2

./: README.md  pyproject.toml  requirements.txt
google_trans2/: __init__.py  constants.py  exceptions.py  translate.py  uas.py
